cargo-features = ["profile-rustflags"]
[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
rustflags = ["-C", "target-cpu=native"]
lto = "fat"

[dependencies]
console = "0.15.7"
itertools = "0.11.0"
petgraph = "0.6.4"
regex = "1.8.4"
